[gd_scene load_steps=5 format=3 uid="uid://dy04j4p55wsa6"]

[ext_resource type="Script" path="res://QuestionCreator/CategoryCreation.gd" id="1_jlqxn"]
[ext_resource type="Texture2D" uid="uid://cnkhyl0ftx88p" path="res://Color 5/Panel 8.png" id="2_4g4ki"]
[ext_resource type="Texture2D" uid="uid://bhwdt4belt4pj" path="res://Color 5/Button 1.png" id="3_sojs0"]
[ext_resource type="Texture2D" uid="uid://b3g31nvwr3stk" path="res://border.png" id="4_x6ost"]

[node name="CategoryCreation" type="Node2D"]
script = ExtResource("1_jlqxn")

[node name="Panel8" type="Sprite2D" parent="."]
position = Vector2(956.001, 542.5)
scale = Vector2(1.51191, 1.57805)
texture = ExtResource("2_4g4ki")

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 369.0
offset_top = 718.0
offset_right = 1573.0
offset_bottom = 1002.0
columns = 2

[node name="Button1" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(600, 140)
layout_mode = 2
texture_normal = ExtResource("3_sojs0")
stretch_mode = 0

[node name="Button2" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(600, 140)
layout_mode = 2
texture_normal = ExtResource("3_sojs0")
stretch_mode = 0

[node name="Button3" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(600, 140)
layout_mode = 2
texture_normal = ExtResource("3_sojs0")
stretch_mode = 0

[node name="Button4" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(600, 140)
layout_mode = 2
texture_normal = ExtResource("3_sojs0")
stretch_mode = 0

[node name="PictureContainer" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 579.0
offset_top = 511.0
offset_right = 619.0
offset_bottom = 551.0

[node name="TextEdit" type="Label" parent="PictureContainer"]
offset_left = -200.0
offset_right = 986.0
offset_bottom = 182.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "dasdasdsa"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Border" type="TextureRect" parent="PictureContainer"]
offset_left = -365.0
offset_top = -346.0
offset_right = 1115.0
offset_bottom = -11.0
texture = ExtResource("4_x6ost")
expand_mode = 1

[node name="TextEdit" type="Label" parent="."]
offset_left = 377.0
offset_top = 223.0
offset_right = 1565.0
offset_bottom = 596.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 51
text = "dasdasdsa"
horizontal_alignment = 1
vertical_alignment = 1
